<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.bandtec.filosofosquejantam.activity.MainActivity">
    <!--Filósofo 1-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/filosofo1"
        android:id="@+id/txtFilosofo1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"/>
    <!--Lado Direito-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo1"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo1"
        android:id="@+id/ladoD1"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/ladoDireito"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ladoD1"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo1"
        android:id="@+id/talherD1"
        android:textColor="@color/black"
        android:text="@string/talher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/talherD1"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo1"
        android:id="@+id/tokenD1"
        android:textColor="@color/black"
        android:text="@string/token"
        />
    <!--Botão comer-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tokenE1"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo1"
        android:textSize="10sp"
        android:text="@string/btn_comer"
        android:id="@+id/btnComercar1"
        android:onClick="comecarComer1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tokenE1"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo1"
        android:textSize="10sp"
        android:text="@string/btn_parar"
        android:id="@+id/btnParar1"
        android:onClick="pararComer1"
        />
    <!--Imagem filósofo 1-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgFilosofo1"
        android:src="@mipmap/pensando1"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo1"
        app:layout_constraintBottom_toTopOf="@id/txtFilosofo2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <!--Lado Esquerdo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo1"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo1"
        android:id="@+id/ladoE1"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/ladoEsquerdo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ladoE1"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo1"
        android:id="@+id/talherE1"
        android:textColor="@color/black"
        android:text="@string/talher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/talherE1"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo1"
        android:id="@+id/tokenE1"
        android:textColor="@color/black"
        android:text="@string/token"
        />
    <!--Filósofo 2-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgFilosofo1"
        android:text="@string/filosofo2"
        android:id="@+id/txtFilosofo2"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"/>
    <!--Lado Esquerdo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo2"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo2"
        android:id="@+id/ladoE2"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/ladoEsquerdo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ladoE2"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo2"
        android:id="@+id/talherE2"
        android:textColor="@color/black"
        android:text="@string/talher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/talherE2"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo2"
        android:id="@+id/tokenE2"
        android:textColor="@color/black"
        android:text="@string/token"
        />
    <!--Botão comer-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tokenE2"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo2"
        android:textSize="10sp"
        android:text="@string/btn_comer"
        android:id="@+id/btnComercar2"
        android:onClick="comecarComer2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tokenE2"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo2"
        android:textSize="10sp"
        android:text="@string/btn_parar"
        android:id="@+id/btnParar2"
        android:onClick="pararComer2"
        />
    <!--Imagem filósofo 2-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgFilosofo2"
        android:src="@mipmap/pensando1"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <!--Lado Direito-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo2"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo2"
        android:id="@+id/ladoD2"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/ladoDireito"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ladoD2"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo2"
        android:id="@+id/talherD2"
        android:textColor="@color/black"
        android:text="@string/talher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/talherD2"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo2"
        android:id="@+id/tokenD2"
        android:textColor="@color/black"
        android:text="@string/token"
        />
    <!--Filósofo 3-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgFilosofo2"
        android:text="@string/filosofo3"
        android:id="@+id/txtFilosofo3"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"/>
    <!--Lado Esquerdo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo3"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo3"
        android:id="@+id/ladoE3"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/ladoEsquerdo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ladoE3"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo3"
        android:id="@+id/talherE3"
        android:textColor="@color/black"
        android:text="@string/talher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/talherE3"
        app:layout_constraintRight_toLeftOf="@id/imgFilosofo3"
        android:id="@+id/tokenE3"
        android:textColor="@color/black"
        android:text="@string/token"
        />
    <!--Botão comer-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tokenE3"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo3"
        android:textSize="10sp"
        android:text="@string/btn_comer"
        android:id="@+id/btnComercar3"
        android:onClick="comecarComer3"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tokenE3"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo3"
        android:textSize="10sp"
        android:text="@string/btn_parar"
        android:id="@+id/btnParar3"
        android:onClick="pararComer3"
        />
    <!--Imagem Filósofo 3-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgFilosofo3"
        android:src="@mipmap/pensando1"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <!--Lado Direito-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo3"
        app:layout_constraintTop_toBottomOf="@id/txtFilosofo3"
        android:id="@+id/ladoD3"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/ladoDireito"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ladoD3"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo3"
        android:id="@+id/talherD3"
        android:textColor="@color/black"
        android:text="@string/talher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/talherD3"
        app:layout_constraintLeft_toRightOf="@id/imgFilosofo3"
        android:id="@+id/tokenD3"
        android:textColor="@color/black"
        android:text="@string/token"
        />
</android.support.constraint.ConstraintLayout>